ENABLE_TESTING()
FIND_PACKAGE(Python COMPONENTS Interpreter REQUIRED)

SET(UNIT_TEST swiftest_test_suite)
ADD_CUSTOM_TARGET(${UNIT_TEST} ALL)
ADD_DEPENDENCIES(${UNIT_TEST} ${SWIFTEST_DRIVER})

ADD_TEST(NAME ${UNIT_TEST} COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test_input_output.py)

ADD_CUSTOM_COMMAND(
     TARGET ${UNIT_TEST}
     COMMENT "Run tests"
     POST_BUILD 
     WORKING_DIRECTORY ${TEST}
     COMMAND ${CMAKE_CTEST_COMMAND}  "${UNIT_TEST}" --output-on-failures
)

